Fix BlitFramebuffer's context dirtying.

Mark the context changed if the destination of the blit is the default
back buffer. Added new pixel test.

BUG=768969

Cq-Include-Trybots: master.tryserver.chromium.android:android_optional_gpu_tests_rel;master.tryserver.chromium.linux:linux_optional_gpu_tests_rel;master.tryserver.chromium.mac:mac_optional_gpu_tests_rel;master.tryserver.chromium.win:win_optional_gpu_tests_rel
Change-Id: I30d8c6df99c3dc32466d55157c9e9d31acf8ef38
Reviewed-on: https://chromium-review.googlesource.com/706602
Commit-Queue: Zhenyao Mo <zmo@chromium.org>
Reviewed-by: Zhenyao Mo <zmo@chromium.org>
Cr-Commit-Position: refs/heads/master@{#507454}
Former-commit-id: 0916d55b226948b79bb46ba63b8649e3448f0d18