third_party/WebKit/Source/modules/webgl/WebGL2RenderingContextBase.cpp
@@ -393,10 +393,14 @@ void WebGL2RenderingContextBase::blitFramebuffer(GLint src_x0,
   if (isContextLost())
     return;
 
+  bool default_framebuffer_bound = !GetFramebufferBinding(GL_DRAW_FRAMEBUFFER);
   DrawingBuffer::ScopedRGBEmulationForBlitFramebuffer emulation(
-      GetDrawingBuffer(), !!GetFramebufferBinding(GL_DRAW_FRAMEBUFFER));
+      GetDrawingBuffer(), !default_framebuffer_bound);
   ContextGL()->BlitFramebufferCHROMIUM(src_x0, src_y0, src_x1, src_y1, dst_x0,
                                        dst_y0, dst_x1, dst_y1, mask, filter);
+  if (default_framebuffer_bound) {
+    MarkContextChanged(kCanvasChanged);
+  }
 }
 
 bool WebGL2RenderingContextBase::ValidateTexFuncLayer(const char* function_name,
